--- a/.gitignore
+++ b/.gitignore
@@ -162,3 +162,10 @@ cython_debug/
 #  option (not recommended) you can uncomment the following to ignore the entire idea folder.
 .idea/
 
+/data/
+/out/
+/compare_out/
+/bench_out/
+/README_RU.md
+/tests/
+/project.zip
